[gd_scene load_steps=6 format=2]

[ext_resource path="res://Blade Frogger Assets/Level/Street.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Level/Level.gd" type="Script" id=3]
[ext_resource path="res://Blade Frogger Assets/Level/Sidewalk_dark.png" type="Texture" id=4]

[sub_resource type="TileSet" id=1]
0/name = "Sidewalk_dark.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 128 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Street.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 128, 256 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 32, 32 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[node name="Level" type="Node"]
script = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 506, 250 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="StartPositions" type="Node" parent="."]

[node name="CarStart1" type="Position2D" parent="StartPositions"]
position = Vector2( -215, 463 )

[node name="CarStart2" type="Position2D" parent="StartPositions"]
position = Vector2( -228, -96 )

[node name="CarStart3" type="Position2D" parent="StartPositions"]
position = Vector2( 1126, 292 )

[node name="CarStart4" type="Position2D" parent="StartPositions"]
position = Vector2( 1128, 71 )

[node name="CarStart5" type="Position2D" parent="StartPositions"]
position = Vector2( -167, -404 )

[node name="CarStart6" type="Position2D" parent="StartPositions"]
position = Vector2( 1131, -689 )

[node name="CarTimers" type="Node" parent="."]

[node name="Timer1" type="Timer" parent="CarTimers"]
wait_time = 2.0
autostart = true

[node name="Timer2" type="Timer" parent="CarTimers"]
wait_time = 2.0
autostart = true

[node name="Timer3" type="Timer" parent="CarTimers"]
wait_time = 2.0
autostart = true

[node name="Timer4" type="Timer" parent="CarTimers"]
wait_time = 2.0
autostart = true

[node name="Timer5" type="Timer" parent="CarTimers"]
wait_time = 2.0
autostart = true

[node name="Timer6" type="Timer" parent="CarTimers"]
wait_time = 2.0
autostart = true

[node name="PlayerStartPos" type="Position2D" parent="."]
position = Vector2( 552, 360 )

[node name="YSort" type="YSort" parent="."]

[connection signal="timeout" from="CarTimers/Timer1" to="." method="_on_Timer1_timeout"]
[connection signal="timeout" from="CarTimers/Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="CarTimers/Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="timeout" from="CarTimers/Timer4" to="." method="_on_Timer4_timeout"]
[connection signal="timeout" from="CarTimers/Timer5" to="." method="_on_Timer5_timeout"]
[connection signal="timeout" from="CarTimers/Timer6" to="." method="_on_Timer6_timeout"]
